# ServoLess

./: README.md  ServoLess 开发记录.md
Firmware/ServoLess/: CMakeLists.txt  sdkconfig.old
Firmware/ServoLess/components/FOC/: CMakeLists.txt  FOC.c  FOC.h  FOC_LPF.c  FOC_PID.c  FOC_PID.h  FOC_conf.h  hardware_api.h
Firmware/ServoLess/components/FOC/hardware_specific/: esp32_mcu.c  esp32_mcu.h
Firmware/ServoLess/components/FOC/sensor/: AS5048A.c  AS5048A.h  current_sense.c  current_sense.h  current_sense_DMA.c
Firmware/ServoLess/main/: FOC_task.c  (+7 more)
Firmware/adc_dma/: CMakeLists.txt
Firmware/adc_oneshot/: CMakeLists.txt
Firmware/blink/: sdkconfig  sdkconfig.old
Firmware/can/: CMakeLists.txt  sdkconfig  sdkconfig.old
Firmware/mcpwm_servo/: CMakeLists.txt
Firmware/mcpwm_sync/: sdkconfig  sdkconfig.old
Firmware/spi/: CMakeLists.txt
Firmware/uart/: CMakeLists.txt  sdkconfig
Firmware/uart_event/: CMakeLists.txt
Firmware/uart_test/: CMakeLists.txt
Firmware/wifi_http/: CMakeLists.txt  sdkconfig.old
Hardware/ServoLess/: BLDC_driver.kicad_sch  Magnetic_Encoder.kicad_sch  ServoLess.kicad_pcb  ServoLess.kicad_prl  ServoLess.kicad_pro  ServoLess.kicad_sch  ServoLess.rar  fp-info-cache
Hardware/ServoLess_v2/: BLDC_driver.kicad_sch  Magnetic_Encoder.kicad_sch  ServoLess.csv  ServoLess.kicad_pcb  ServoLess.kicad_prl  ServoLess.kicad_pro  ServoLess.kicad_sch  ServoLess_v2.rar  fp-info-cache
Mechanism/: ServoLess.FCStd  driver.dxf  后盖.3mf  后盖.step  后盖_v2.3mf  后盖_v2.step
Reference/slvc593a/: DRV8313EVM_BOM.XLS
Software/Vofa/: vofa+.csv  vofa+.tabviews.json
(+46 files in other folders)
